--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .btn {
+    @apply rounded-full transition ease-in-out duration-200 hover:opacity-80;
+  }
+
+  .btn-large {
+    @apply px-6 py-3;
+  }
+
+  .btn-small {
+    @apply px-4 py-2;
+  }
+
+  .btn-primary {
+    @apply btn bg-black text-white;
+  }
+
+  .btn-secondary {
+    @apply btn bg-white text-black;
+  }
+}
