--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,6 +50,10 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
     @apply grow;
   }
 
+  .btn-disabled {
+    @apply opacity-50 hover:opacity-50 !important;
+  }
+
   .btn-primary {
     @apply btn bg-black text-white;
   }
